# sheer_third_party

./: .gitignore  README.md  README_CN.md  build_all.sh
build_scripts/: README_CN.md  build_template.py
build_scripts/FTXUI/: v5.0.0.sh
build_scripts/GSL/: v4.0.0.sh
build_scripts/PostgreSQL/: 14.12.py  14.12.sh  dependency_library
build_scripts/Simple-Web-Server/: v3.1.1.sh
build_scripts/asio/: 1.18.0.sh  asio-1-18-0.sh  dependency_library
build_scripts/benchmark/: v1.8.3.sh
build_scripts/boost/: 1.79.0.sh  boost-1.79.0.sh
build_scripts/cpython/: v3.11.0.sh  v3.8.0.sh
build_scripts/cudnn/: linux-x86_64-9.2.0.82_cuda11-archive.sh
build_scripts/eigen/: 3.3.0.sh
build_scripts/ffmpeg/: 4.1.py  4.1.sh  4.3.py  dependency_library  release-4.1.sh
build_scripts/fltk/: 1.3.7.sh  release-1.3.7.sh
build_scripts/fmt/: 9.0.0.sh
build_scripts/folly/: build.sh
build_scripts/glog/: v0.6.0.sh
build_scripts/googletest/: 1.12.0.py  1.12.0.sh  release-1.12.0.py  release-1.12.0.sh
build_scripts/json-c/: 0.17.sh
build_scripts/jsoncpp/: 1.9.5.sh
build_scripts/jwt-cpp/: v0.7.0.sh
build_scripts/libpqxx/: 7.9.0.sh
build_scripts/llvm/: 19.1.6.sh
build_scripts/lua/: dependency_library  v5.3.6.sh
build_scripts/luarocks/: 3.11.1.sh
build_scripts/mINI/: 0.9.16.sh
build_scripts/magic_enum/: v0.9.0.sh
build_scripts/minizip-ng/: 3.0.9.sh
build_scripts/nlohmann_json/: v3.10.0.sh
build_scripts/opencv/: 4.5.0_cuda.sh
build_scripts/openssl/: 1.1.1.sh  3.0.1.py
build_scripts/paho.mqtt.c/: v1.3.10.sh
build_scripts/paho.mqtt.cpp/: v1.2.0.sh
build_scripts/poco/: 1.12.0.sh
build_scripts/protobuf/: v3.20.2.sh
build_scripts/pybind11/: v2.11.0.sh
build_scripts/qt/: 5.15.2.py  5.15.2.sh
build_scripts/she_ini_parse/: v0.0.1.sh
build_scripts/she_log/: v0.0.1.sh
build_scripts/she_test/: 0.0.1.sh  1.0.0.sh
build_scripts/sheer/: build.sh
build_scripts/spdlog/: v1.10.0.sh
build_scripts/sqlite/: 3.45.0.py
build_scripts/sqlite_orm/: v1.9.py
build_scripts/yaml-cpp/: 0.8.0.sh
build_scripts/zlib/: v1.2.13.sh
build_utils/use_lua/: build_utils.lua  file_utils.lua  test_build_utils.lua  test_file_utils.lua
build_utils/use_python/: build.py  build_helper.py  build_project.py  check.py  get_source_code.py  log.py  path_helper.py  project.py  record.py  record_steps.py  test.py
lua_test/: lua  luarocks
sample/FTXUI-5.0.0/: CMakeLists.txt  build.sh  main.cpp
sample/GSL-4.0.0/: CMakeLists.txt  build.sh  global_test_set.h  main.cpp  t1_algorithms.h  t2_assert.h  t3_byte.h  t4_narrow.h  t5_pointers.h  t6_span.h  t7_zstring.h  t8_util.h
sample/PostgreSQL-14.12/: CMakeLists.txt  build.sh  create_db.sh  init_pgsql.sh  main.cpp  start_pgsql.sh  stop_pgsql.sh  t0_example.h  t1_connect_test.h
sample/Simple-Web-Server-3.1.1/: CMakeLists.txt  build.sh
sample/asio-1.12.0/: build.sh
sample/asio-1.18.0/: CMakeLists.txt  build.sh  m1_sync_timer_test.h  m2_async_timer_test.h  m3_sync_tcp_demo.h  main.cpp
sample/benchmark-1.8.3/: CMakeLists.txt  build.sh  main.cpp  t1_base.h
sample/boost-1.79.0/: CMakeLists.txt  build.sh  main.cpp
sample/cpython-3.8.10/: build.sh  test.sh
sample/eigen-3.3.0/: CMakeLists.txt  build.sh  main.cpp
sample/ffmpeg-4.1/: CMakeLists.txt  build.sh  cut_frame_to_h264.h  dependency_library  main.cpp  rtsp_to_h264.h  rtsp_to_jpeg.h
sample/fltk-1.3.7/: CMakeLists.txt  build.sh  main.cpp  method_1.h  method_2.h  method_3.h  method_4.h
sample/fmt-9.0.0/: CMakeLists.txt  build.sh  main.cpp
sample/glog-0.6.0/: CMakeLists.txt  build.sh  main.cpp
sample/googletest-1.12.0/: CMakeLists.txt  build.py  build.sh  global_test_set.h  main.cpp  stackoverflow_mock_code.cpp  t1_gtest_basic.cpp  t4_system_interface_mock.cpp  t5_std_func_mock.cpp  t6_cpp_stub.cpp
sample/googletest-1.12.0/cpp-stub_lib/: README.md
sample/googletest-1.12.1/: CMakeLists.txt  build.sh  t2_gmock_easy.cpp  t3_gmock_complex.cpp
sample/json-c-0.17/: CMakeLists.txt  build.sh  main.cpp
sample/jsoncpp-1.9.5/: CMakeLists.txt  build.sh  m1_basic_test.h  main.cpp
sample/jwt-cpp-0.7.0/: CMakeLists.txt  build.sh  header.h  main.cpp
sample/libpqxx-7.9.0/: CMakeLists.txt  build.sh  main.cpp
sample/lua-5.3.6/: build.sh
sample/luarocks-3.11.1/: build.sh
sample/mINI-0.9.16/: CMakeLists.txt  main.cpp  myfile.ini
sample/magic_enum-0.9.0/: CMakeLists.txt  build.sh  main.cpp
sample/minizip-ng-3.0.9/: CMakeLists.txt  build.sh  main.cpp  t1_compress_data.h  t2_decompress_data.h  t3_compress_data.h
sample/nlohmann_json-3.10.0/: CMakeLists.txt  build.sh  header.h  main.cpp  user_request.json  user_response.json
sample/openssl-1.1.1/: CMakeLists.txt  build.sh  main.cpp
sample/openssl-3.0.0/: CMakeLists.txt  method_2.h
sample/openssl-3.0.1/: README.md  aes_cbc_128_interface.h  main.cpp  method_1.h  method_3.h  method_4_rsa.h
sample/paho.mqtt.c-1.3.10/: CMakeLists.txt  build.sh  main.cpp  method_1_publish_sync.h  method_2_sub_async.h  method_3_publish_async.h  method_4_async_pub.h  method_5_async_sub.h  method_6_interface.h  method_7_async_ssl_pub.h  (+1 more)
sample/paho.mqtt.cpp-1.2.0/: CMakeLists.txt  build.sh  main.cpp  method_10_cpp_ssl_pub.h  method_11_cpp_pub.h  method_12_cpp_pub_sub.h  method_9_cpp_sub.h
sample/protobuf-3.20.2/: CMakeLists.txt  build.sh  call_ pb_to_generate_code.sh  header.h  main.cpp  people.proto
sample/pybind11-2.11.0/: CMakeLists.txt  README.md  api_1.cpp  api_2.cpp  build.sh  publish_package.sh  sample_cpp_lib.cpp  setup.py  test_call.py
sample/pybind11-2.11.0/pack_test/: README.md  after_install.py  pipline.sh  setup.py
sample/pybind11-2.11.0/pack_test/double_vector_1D/: __init__.py
sample/pybind11-2.11.0/python_call_test/: after_install.py  sample_cpp_lib.py  test_call.py
sample/she_ini_parse-0.0.1/: CMakeLists.txt  build.sh  main.cpp  parse_test.ini
sample/she_log-0.0.1/: CMakeLists.txt  README.md  build.sh  main.cpp
sample/she_test-0.0.1/: CMakeLists.txt  build.sh  main.cpp  suite1.cpp  suite2.cpp
sample/sheer/: CMakeLists.txt  build.sh  main.cpp
sample/simple_web_server-3.1.1/: CMakeLists.txt  main.cpp
(+62 files in other folders)
